# magical-utility

./: README.md  argumentparsing.py  backprop.py  backup_to_zip.py  check_popup.py  commoncrawl_extract.py  convolutional_layer.py  copy_code.py  crawl_agent.py  crawler.py  custom_ui.py  deposit.py  ecs-container.json  edit_distance_match.py  finetune_llm.py  folder_sync.bat  hello.py  llm_evaluation.py  model_code.py  null_mapping.py  parallel.py  playaround.py  pyproject.toml  residual_block.py  rich_dataframe_print.py  rich_sample.py  scraped_data.csv  scraped_data.xlsx  search_unsplash.py  settings.json  streamlit_app.py  testing.ipynb  testing.py  utils.py  web-scraping.py  widgets_jupyter.py
